--- a/news_app/pubspec.yaml
+++ b/news_app/pubspec.yaml
@@ -33,7 +33,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
+  animated_splash_screen: ^1.2.0
+  firebase_core: ^1.17.0
+  firebase_auth: ^3.3.18
+  firebase_analytics: ^9.1.8
+  cloud_firestore: ^3.1.16
+  get: ^4.6.5
+  google_fonts: ^3.0.1
+  lottie: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
