--- a/news_app/pubspec.yaml
+++ b/news_app/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   get: ^4.6.5
   google_fonts: ^3.0.1
   lottie: ^1.3.0
+  http: ^0.13.4
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
