--- a/news_app/pubspec.yaml
+++ b/news_app/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   google_fonts: ^3.0.1
   http: ^0.13.4
   cached_network_image: ^3.2.1
-
+  # flutter_swipable: ^1.2.1
+  tcard: ^1.3.3
 
 dev_dependencies:
   flutter_test:
